vNext
----------
- [MINOR] Use legacy FIDO2 API to provide security key support to Android 13 devices (#2508)

Version 18.0.0 
----------
(Common4j 15.0.0)
- [PATCH] Add purpose claim to JwtRequestBody (#2454)
- [MINOR] Changes needed for token binding CA policy error handling (#2453)
- [MINOR] Allow OneAuth to set Max MSAL-Broker Protocol version (#2490)
- [MAJOR] Remove RT from AAD token responses (#2483)
- [MINOR] Add API in MicrosoftStsOAuthStrategy to request token and handle response with provided handler (@2478)
- [MINOR] Setting flights to control UrlConnection timeout values (#2473)
- [PATCH] Fix Native Auth authority data being persisted across different SDK instances (#2462)
- [PATCH] Fix incorrect formatting when logging native auth objects
- [MINOR] Disable Network check by default (#2480)
- [MINOR] Return Family ID in LocalAuthenticationResult (#2479)
- [PATCH] Move MS STS Response handling to separate class (#2471)
- [MINOR] Add support for email OTP MFA in native authentication (#2468)
- [MINOR] Moving OS version check for passkeys (#2450)
- [MINOR] Support for email OTP MFA in native authentication (#2489)
- [PATCH] Change LTW debug signature hash (#2492)
- [MINOR] Add new span name for OnUpgradeReceiver (#2494)

Version 17.7.0
---------
- [MINOR] Add null cursor BrokerCommunicationException error category (#2459)
- [MINOR] Classifying more UNKNOWN_ERRORs (#2460)

Version 17.6.1
---------
- [MINOR] Support Passing x-client-xtra-sku header to ESTS only for brokered requests (#2430)
- [MINOR] Account Transfer Skips Account Chooser (#2375)
- [PATCH] Add null check for CBA logging (#2443)
- [MINOR] Add support for per tenant flighting in broker (#2433)
- [MINOR] Fix AccountManager Strategy (#2427)
- [MINOR] Add MessageDigest to ICryptoFactory (#2423)
- [PATCH] Adding check for OS version for passkeys (#2419)
- [MINOR] Platform Specific Extra Query Parameters (#2426)
- [PATCH] Return API error and errorDescription in case of unexpected response (#2431)